<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.maxpc.carryme2.MainActivity"
    android:background="@drawable/bggreyv">

    <Button
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:layout_gravity="center_horizontal"
        android:textAlignment="gravity"
        android:layout_margin="20dp"
        android:id="@+id/calc" />

    <Button
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:text="@string/ue"
        android:id="@+id/union"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp" />

    <Button
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:text="@string/howto"
        android:id="@+id/cmtJouer"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp" />

    <Button
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:text="@string/reglages"
        android:id="@+id/reglages"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp" />

    <Button
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonCredits"
        android:id="@+id/credits"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp" />

</LinearLayout>
